# Chess-Gambit-RL

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  train.yml
deploy/hf_endpoint/: README.md  handler.py  requirements.txt
deploy/hf_job/: run.py
deploy/hf_space/: Dockerfile  README.md  app.py  requirements.txt
docs/: ARCHITECTURE.md  GETTING_STARTED.md  THEORY.md
notebooks/: shannons_gambit_reproduce.ipynb
scripts/: download_data.py  quality_gate.py
shannons_gambit/: __init__.py  cli.py  config.py  export.py  logging_utils.py  nightly_job.py  phases.py  reports.py  seeding.py  serve.py  torch_utils.py  train_job.py
shannons_gambit/agents/: adaptive.py  base.py  dqn.py  ladder.py  neural.py  opening_book.py  ppo.py  random_agent.py  router.py  tabular_q.py
shannons_gambit/agents/alphazero/: continual.py  mcts.py  selfplay.py  train.py
shannons_gambit/data/: dataset.py  encode.py  lichess.py  sample_games.pgn
shannons_gambit/eval/: arena.py  benchmark.py  elo.py  stockfish_ref.py
shannons_gambit/infotheory/: analysis.py  divergence.py  entropy.py
shannons_gambit/mdp/: bellman.py  chess_mdp.py  endgames.py
shannons_gambit/models/: net.py  prediction.py  supervised.py
tests/: test_agents_router.py  test_arena_elo.py  test_bellman.py  test_continual.py  test_data.py  test_encode.py  test_endgame.py  test_infotheory.py  test_mcts.py  test_opening_book.py  test_stockfish.py  test_supervised.py
web/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
(+28 files in other folders)
