[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shannons-gambit"
version = "0.1.0"
description = "Information-theoretic reinforcement learning for chess: MDP/Bellman, deep RL, and real Lichess data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aravind Kannappan" }]
keywords = ["chess", "reinforcement-learning", "information-theory", "alphazero", "mdp"]
dependencies = [
  "chess>=1.11",
  "numpy>=1.26",
  "zstandard>=0.22",
  "pyarrow>=15",
  "tqdm>=4.66",
]

[project.optional-dependencies]
ml = [
  "torch>=2.3",
  "huggingface_hub>=0.23",
  "matplotlib>=3.8",
  "pandas>=2.2",
]
dev = [
  "ruff>=0.6",
  "build>=1.2",
]

[project.scripts]
sgambit = "shannons_gambit.cli:main"

[tool.setuptools.packages.find]
include = ["shannons_gambit*"]

[tool.setuptools.package-data]
"shannons_gambit.data" = ["*.pgn"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
